# label-tiles

./: .gitignore  LICENSE  Makefile  README.md
backend/: config.py  export.py  labels.py  main.py  pyproject.toml  sliding_window.py  tile_downloader.py  titiler_router.py
examples/: dataloader.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfigPanel.tsx  ExportPanel.tsx  GeoTiffDropZone.tsx  GeoTiffInput.tsx  HotkeyLabelBar.tsx  LabelTable.tsx  LayerToggle.tsx  MapView.tsx
frontend/src/hooks/: useConfig.ts  useHotkeys.ts  useLabels.ts
