[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.124.4",
    "geopandas>=1.1.1",
    "morecantile>=7.0.0",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "sse-starlette>=3.0.3",
    "uvicorn>=0.38.0",
]
